--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -8,16 +8,44 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <!-- Brand -->
+    <a class="navbar-brand" href="#">Student Management System</a>
 
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/students}">Student Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/students}">Teacher Management</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <div class="container">
     <div class="row">
-        <center>
+
 
             <h1 >
                 Willkommen in der Studenten Managment Konsole
             </h1>
 
-        </center>
+
+
+
+    </div>
+
+    <div class = "row">
+        <div class = "col-lg-3">
+            <a th:href = "@{/students/new}" class = "btn btn-primary btn-sm mb-3"> Studenten einfügen</a>
+        </div>
 
 
     </div>
