spring app ready, RDS bdd ready

--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Student Managment System</title>
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <!-- Brand -->
-    <a class="navbar-brand" href="#">Student Management System</a>
+<nav class="navbar navbar-expand-md " style="background-color: #CD0404">
+
+    <!-- Brand  bg-dark navbar-dark-->
+    <a class="navbar-brand" href="#" style="color:white ">THB Student Management System</a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -21,10 +22,10 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/students}">Student Management</a>
+                <a class="nav-link" th:href="@{/students}" style="color:white ">Studenten Management</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/students}">Teacher Management</a>
+                <a class="nav-link" th:href="@{/students}" style="color:white ">Dozenten Management</a>
             </li>
         </ul>
     </div>
@@ -33,74 +34,75 @@
     <div class="row">
 
 
-            <h1 >
-                Willkommen in der Studenten Managment Konsole
-            </h1>
-
-
+        <h1>
+            Willkommen in der Studenten Managment Konsole
+        </h1>
 
 
     </div>
 
-    <div class = "row">
-        <div class = "col-lg-3">
-            <a th:href = "@{/students/new}" class = "btn btn-primary btn-sm mb-3"> Studenten einfügen</a>
+    <div class="row">
+        <div class="col-lg-3">
+            <a th:href="@{/students/new}" class="btn  btn-sm mb-3" style="background-color: #CD0404;color: white"> Studenten einfügen</a>
+            <!--btn-primary-->
         </div>
 
 
     </div>
-        <table class="table  table-bordered table-striped">
-            <thead class="table-dark">
+    <table class="table  table-bordered table-striped">
+        <thead class="table-dark">
 
-            <th>
-                Students Name
-            </th>
-            <th>
-                Students Nachname
-            </th>
-            <th>
-                Students Email
-            </th>
-            <th>
-                Aktionen
-            </th>
-            </thead>
-
-
-
-  <tbody>
-  <tr th:each = "student: ${students}">
+        <th>
+            Students Name
+        </th>
+        <th>
+            Students Nachname
+        </th>
+        <th>
+            Students Email
+        </th>
+        <th>
+            Aktionen
+        </th>
+        </thead>
 
 
-      <td th:text="${student.name}"></td>
-      <td th:text="${student.nachname}"></td>
-      <td th:text="${student.email}"></td>
-      <td ></td>
+        <tbody>
+        <tr th:each="student: ${students}">
 
 
-  </tr>
+            <td th:text="${student.name}"></td>
+            <td th:text="${student.nachname}"></td>
+            <td th:text="${student.email}"></td>
+            <td>
+
+                <!--
+                <a th:href="@{/students/edit/{id}(id=${student.id})}"
+                   class="btn btn-primary">Bearbeiten</a>
+                -->
 
 
-  <!--
+                <a th:href="@{/students/{id}(id=${student.id})}"
+                   class="btn btn-danger">Löschen</a>
+
+            </td>
 
 
-  -->
-
-  </tbody>
+        </tr>
 
 
+        <!--
 
 
+        -->
+
+        </tbody>
 
 
-        </table>
-
-
+    </table>
 
 
 </div>
-
-
 
 
 </body>
