--- a/src/main/resources/templates/create_student.html
+++ b/src/main/resources/templates/create_student.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+<nav class="navbar navbar-expand-md" style="background-color: #CD0404">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Student Management System</a>
+  <a class="navbar-brand" href="#" style="color:white ">THB Student Management System</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -22,7 +22,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/students}">Student Management</a>
+        <a class="nav-link" th:href="@{/students}" style="color:white ">Student Management</a>
       </li>
     </ul>
   </div>
@@ -69,7 +69,7 @@
           </div>
 
           <div class = "box-footer">
-            <button type="submit" class = "btn btn-primary">
+            <button type="submit" class = "btn " style="background-color: #CD0404;color: white">
               Senden
             </button>
           </div>
