--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -30,80 +30,116 @@
         </ul>
     </div>
 </nav>
-<div class="container">
-    <div class="row">
+<div class="bg-image p-5 text-center shadow-1-strong  mb-5 "  style="background-image: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg');"
+>
 
 
-        <h1>
-            Willkommen in der Studenten Managment Konsole
-        </h1>
+
+    <div class="container">
+        <div class="row">
 
 
-    </div>
+            <h1>
+             Studenten Managment Konsole
+            </h1>
 
-    <div class="row">
-        <div class="col-lg-3">
-            <a th:href="@{/students/new}" class="btn  btn-sm mb-3" style="background-color: #CD0404;color: white"> Studenten einfügen</a>
-            <!--btn-primary-->
+
         </div>
 
+        <div class="row">
+            <div class="col-lg-3">
+                <a th:href="@{/students/new}" class="btn  btn-sm mb-3" style="background-color: #CD0404;color: white">
+                    Studenten einfügen</a>
+                <!--btn-primary-->
+            </div>
+
+
+        </div>
+        <table class="table  table-bordered table-striped" style="background-color: white;opacity: 0.8;">
+            <thead class="table-dark">
+
+            <th>
+                Students Name
+            </th>
+            <th>
+                Students Nachname
+            </th>
+            <th>
+                Students Email
+            </th>
+            <th>
+                Aktionen
+            </th>
+            </thead>
+
+
+            <tbody>
+            <tr th:each="student: ${students}">
+
+
+                <td th:text="${student.name}"></td>
+                <td th:text="${student.nachname}"></td>
+                <td th:text="${student.email}"></td>
+                <td>
+
+                    <!--
+                    <a th:href="@{/students/edit/{id}(id=${student.id})}"
+                       class="btn btn-primary">Bearbeiten</a>
+                    -->
+
+
+                    <a th:href="@{/students/{id}(id=${student.id})}"
+                       class="btn btn-danger">Löschen</a>
+
+                </td>
+
+
+            </tr>
+
+
+            <!--
+
+
+            -->
+
+            </tbody>
+
+
+        </table>
+
 
     </div>
-    <table class="table  table-bordered table-striped">
-        <thead class="table-dark">
-
-        <th>
-            Students Name
-        </th>
-        <th>
-            Students Nachname
-        </th>
-        <th>
-            Students Email
-        </th>
-        <th>
-            Aktionen
-        </th>
-        </thead>
-
-
-        <tbody>
-        <tr th:each="student: ${students}">
-
-
-            <td th:text="${student.name}"></td>
-            <td th:text="${student.nachname}"></td>
-            <td th:text="${student.email}"></td>
-            <td>
-
-                <!--
-                <a th:href="@{/students/edit/{id}(id=${student.id})}"
-                   class="btn btn-primary">Bearbeiten</a>
-                -->
-
-
-                <a th:href="@{/students/{id}(id=${student.id})}"
-                   class="btn btn-danger">Löschen</a>
-
-            </td>
-
-
-        </tr>
-
-
-        <!--
-
-
-        -->
-
-        </tbody>
-
-
-    </table>
-
 
 </div>
 
+<!--
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-75 h-50" src="https://images.ctfassets.net/hrltx12pl8hq/3j5RylRv1ZdswxcBaMi0y7/b84fa97296bd2350db6ea194c0dce7db/Music_Icon.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-75 h-50" src="https://images.ctfassets.net/hrltx12pl8hq/3j5RylRv1ZdswxcBaMi0y7/b84fa97296bd2350db6ea194c0dce7db/Music_Icon.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-75 h-50" src="https://images.ctfassets.net/hrltx12pl8hq/3j5RylRv1ZdswxcBaMi0y7/b84fa97296bd2350db6ea194c0dce7db/Music_Icon.jpg" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+-->
 
 </body>
 </html>
