name of jar file changed

--- a/src/main/resources/templates/create_student.html
+++ b/src/main/resources/templates/create_student.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" style="height: 100%;"
+      xmlns:min-height="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,7 +8,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
-<body>
+<body style="min-height: 100%;">
 
 <nav class="navbar navbar-expand-md" style="background-color: #CD0404">
   <!-- Brand -->
@@ -27,7 +28,7 @@
     </ul>
   </div>
 </nav>
-<div class="bg-image p-5  shadow-1-strong  mb-5 "  style="background-image: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg');"
+<div class="bg-image p-5  shadow-1-strong  mb-5 "  style="background: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg') no-repeat center center fixed;background-size: cover;min-height: 100%;"
 >
 <div class = "container">
   <div class = "row">
