BackgroundImage in dem ganzem Screen

--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body style="min-height: 100%;">
+<body style="background: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg') no-repeat center  fixed;background-size: cover;min-height: 100%;">
 
 <nav class="navbar navbar-expand-md " style="background-color: #CD0404">
 
@@ -31,7 +31,7 @@
         </ul>
     </div>
 </nav>
-<div class="bg-image p-5 text-center shadow-1-strong  mb-5 "  style="background: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg') no-repeat center center fixed;background-size: cover;min-height: 100%;"
+<div class="bg-image p-5 text-center shadow-1-strong  mb-5 "
 >
 
 
