--- a/src/main/resources/templates/create_student.html
+++ b/src/main/resources/templates/create_student.html
@@ -8,8 +8,9 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
-<body style="min-height: 100%;">
+<body   style="background: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg') no-repeat center  fixed;background-size: cover;min-height: 100%;">
 
+<!--style="min-height: 100%;"-->
 <nav class="navbar navbar-expand-md" style="background-color: #CD0404">
   <!-- Brand -->
   <a class="navbar-brand" href="#" style="color:white ">THB Student Management System</a>
@@ -28,7 +29,7 @@
     </ul>
   </div>
 </nav>
-<div class="bg-image p-5  shadow-1-strong  mb-5 "  style="background: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg') no-repeat center center fixed;background-size: cover;min-height: 100%;"
+<div class="bg-image p-5  shadow-1-strong  mb-5 "
 >
 <div class = "container">
   <div class = "row">
