add the h5 "from server 1"

--- a/src/main/resources/templates/create_student.html
+++ b/src/main/resources/templates/create_student.html
@@ -8,7 +8,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
-<body   style="background: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg') no-repeat center  fixed;background-size: cover;min-height: 100%;">
+<body   style="background: url('https://integprojektbucket.s3.amazonaws.com/thb-image.jpg') no-repeat center  fixed;background-size: cover;min-height: 100%;">
 
 <!--style="min-height: 100%;"-->
 <nav class="navbar navbar-expand-md" style="background-color: #CD0404">
