--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body style="background: url('https://jobs.b-ite.com/api/v1/assets/0d30fb89-322e-494b-98df-95eea33759e7.jpeg') no-repeat center  fixed;background-size: cover;min-height: 100%;">
+<body style="background: url('https://integprojektbucket.s3.amazonaws.com/thb-image.jpg') no-repeat center  fixed;background-size: cover;min-height: 100%;">
 
 <nav class="navbar navbar-expand-md " style="background-color: #CD0404">
 
@@ -41,7 +41,7 @@
 
 
             <h1>
-             Studenten Managment Konsole
+             Studenten Managment Konsole 
             </h1>
 
 
@@ -110,6 +110,10 @@
 
 
     </div>
+    
+    <h5>
+            from Server 1
+    </h5>
 
 </div>
 
